--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,9 +115,9 @@
     {{ content }}
   </main>
 
-  <footer>
-    <p>&copy; 2025 czeskleba.com</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 czeskleba.com · Impressum</a></p>
+</footer>
 
   <script>
     function toggleTheme() {
