--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ page.title }} – czeskleba.com</title>
+  <link rel="icon" href="/assets/logo.svg" type="image/svg+xml" />
   <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
   <style>
     :root {
@@ -102,7 +103,7 @@
 <body>
   <header>
     <a class="logo" href="/">
-      <img src="/assets/favicon.ico" alt="Home" />
+      <img src="/assets/logo.svg" alt="Home" />
       <span>Back to Main</span>
     </a>
     <div>
