--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 1rem 2.5rem; /* this is good, maybe change to 1.5rem or more */
+      padding: 1rem 2rem; /* this is good, maybe change to 1.5rem or more */
       background-color: var(--bg);
       border-bottom: 1px solid #ccc;
       position: sticky;
@@ -123,7 +123,7 @@
 <body>
   <header>
     <a class="logo" href="/">
-      <img src="/assets/logo.svg" alt="Home" />
+      <img src="/assets/favicon.ico" alt="Home" />
       <span>Back to Main</span>
     </a>
     <div>
