--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,6 +100,19 @@
       color: #888;
     }
 
+    footer a {
+      color: inherit;
+      text-decoration: none;
+    }
+    
+    footer a:hover {
+      text-decoration: underline;
+    }
+    
+    footer a:visited {
+      color: inherit;
+    }
+
     @media (max-width: 600px) {
       header {
         flex-direction: column;
