--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,14 +115,14 @@
 
     @media (max-width: 600px) {
       header {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: row;
+        flex-wrap: wrap;
         padding: 1rem;
         gap: 0.5rem;
       }
 
       .theme-toggle {
-        align-self: flex-end;
+        margin-left: auto;
       }
   
       .links a {
