--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,6 +113,15 @@
       color: inherit;
     }
 
+    main a {
+      color: inherit;
+      text-decoration: underline;
+    }
+    
+    main a:visited {
+      color: inherit;
+    }
+
     @media (max-width: 600px) {
       header {
         flex-direction: row;
