--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,7 +145,7 @@
 <body>
   <header>
     <a class="logo" href="/">
-      <img src="/assets/favicon.ico" alt="Home" />
+      <img src="/assets/logo.svg" alt="Home" />
       <span>Back to Main</span>
     </a>
     <div>
