--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,7 +147,7 @@
     <a class="logo" href="/">
       <img src="/assets/logo.svg" alt="Home" />
       {% unless page.url == "/" %}
-        <span>← Back to Main</span>
+        <span>Back to Main</span>
       {% endunless %}
     </a>
     <div>
